fix: #133 修复 macOS 系统窗口控件与工具栏按钮重叠问题 | Fixed the issue of macOS system window controls overlapping toolbar buttons.

--- a/style/module/bar.less
+++ b/style/module/bar.less
@@ -72,6 +72,11 @@
 /* ↑顶部工具栏↑ */
 #toolbar {
     background-color: var(--custom-tool-bar-background-color);
+
+    // macOS 系统窗口控件位置
+    body:not(.body--win32) & {
+        padding-left: 69px;
+    }
 }
 
 /* 顶部工具栏按钮 */
